[gd_scene load_steps=4 format=3 uid="uid://cq501sdvos586"]

[ext_resource type="FontFile" uid="uid://hu3cedqh4cft" path="res://assets/tools/fonts/PixelOperator8.ttf" id="1_2if4o"]
[ext_resource type="Script" path="res://scripts/hud.gd" id="1_20cvk"]
[ext_resource type="Texture2D" uid="uid://8rjfv0b0gwqs" path="res://assets/heart/heart-filled.png" id="3_424o5"]

[node name="hud" type="CanvasLayer"]
script = ExtResource("1_20cvk")

[node name="score_label" type="Label" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -74.0
offset_right = 434.0
offset_bottom = -10.0
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_2if4o")
theme_override_font_sizes/font_size = 64
text = "0 Cheese"

[node name="heart_3" type="Sprite2D" parent="."]
position = Vector2(1104, 600)
scale = Vector2(8, 8)
texture = ExtResource("3_424o5")

[node name="heart_2" type="Sprite2D" parent="."]
position = Vector2(1040, 600)
scale = Vector2(8, 8)
texture = ExtResource("3_424o5")

[node name="heart_1" type="Sprite2D" parent="."]
position = Vector2(976, 600)
scale = Vector2(8, 8)
texture = ExtResource("3_424o5")
